// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`options > getCodegenOptions snap 1`] = `
{
  "autobuild": true,
  "base": {
    "extraColors": {
      "dark": {
        "base-100": "rgb(29, 35, 42)",
        "base-200": "rgb(25, 30, 36)",
        "base-300": "rgb(21, 25, 30)",
        "base-content": "rgb(166, 173, 186)",
      },
      "light": {
        "base-100": "#ffffff",
        "base-200": "rgb(242, 242, 242)",
        "base-300": "rgb(229, 230, 230)",
        "base-content": "rgb(31, 41, 55)",
      },
    },
    "extraVars": {
      "dark": {
        "animation-btn": "0.25s",
        "animation-input": "0.2s",
        "border-btn": "1px",
        "rounded-badge": "1.9rem",
        "rounded-box": "1rem",
        "rounded-btn": "0.5rem",
        "tab-border": "1px",
        "tab-radius": "0.5rem",
      },
      "light": {
        "animation-btn": "0.25s",
        "animation-input": "0.2s",
        "border-btn": "1px",
        "rounded-badge": "1.9rem",
        "rounded-box": "1rem",
        "rounded-btn": "0.5rem",
        "tab-border": "1px",
        "tab-radius": "0.5rem",
      },
    },
    "themes": {
      "dark": {
        "selector": "[data-theme=\\"dark\\"]",
      },
      "light": {
        "selector": ":root",
      },
    },
    "types": {
      "error": {
        "dark": {
          "error": "#d32029",
          "error-active": "#e84749",
          "error-hover": "#a61d24",
          "info-content": "#ffffff",
        },
        "light": {
          "error": "#f5222d",
          "error-active": "#cf1322",
          "error-content": "#ffffff",
          "error-hover": "#ff4d4f",
        },
      },
      "info": {
        "dark": {
          "info": "#1668dc",
          "info-active": "#3c89e8",
          "info-content": "#ffffff",
          "info-hover": "#1554ad",
        },
        "light": {
          "info": "#1677ff",
          "info-active": "#0958d9",
          "info-content": "#ffffff",
          "info-hover": "#4096ff",
        },
      },
      "neutral": {
        "dark": {
          "neutral": "#bfbfbf",
          "neutral-active": "#8c8c8c",
          "neutral-content": "#ffffff",
          "neutral-hover": "#d9d9d9",
        },
        "light": {
          "neutral": "#bfbfbf",
          "neutral-active": "#8c8c8c",
          "neutral-content": "#ffffff",
          "neutral-hover": "#d9d9d9",
        },
      },
      "primary": {
        "dark": {
          "primary": "#1668dc",
          "primary-active": "#3c89e8",
          "primary-content": "#ffffff",
          "primary-hover": "#1554ad",
        },
        "light": {
          "primary": "#1677ff",
          "primary-active": "#0958d9",
          "primary-content": "#ffffff",
          "primary-hover": "#4096ff",
        },
      },
      "success": {
        "dark": {
          "success": "#49aa19",
          "success-active": "#6abe39",
          "success-content": "#ffffff",
          "success-hover": "#3c8618",
        },
        "light": {
          "success": "#52c41a",
          "success-active": "#389e0d",
          "success-content": "#ffffff",
          "success-hover": "#73d13d",
        },
      },
      "warning": {
        "dark": {
          "warning": "#d89614",
          "warning-active": "#e8b339",
          "warning-content": "#ffffff",
          "warning-hover": "#aa7714",
        },
        "light": {
          "warning": "#faad14",
          "warning-active": "#d48806",
          "warning-content": "#ffffff",
          "warning-hover": "#ffc53d",
        },
      },
    },
  },
  "global": {
    "atMedia": {
      "hover": false,
    },
    "pseudo": {
      "where": true,
    },
    "selector": {
      "globalKeyword": "global",
      "universal": "*",
    },
  },
  "log": true,
  "mode": "styled",
  "varPrefix": "--ice-",
}
`;

exports[`options > getRawCodegenOptions snap 1`] = `
{
  "autobuild": true,
  "base": {
    "extraColors": {
      "dark": {
        "base-100": "rgb(29, 35, 42)",
        "base-200": "rgb(25, 30, 36)",
        "base-300": "rgb(21, 25, 30)",
        "base-content": "rgb(166, 173, 186)",
      },
      "light": {
        "base-100": "#ffffff",
        "base-200": "rgb(242, 242, 242)",
        "base-300": "rgb(229, 230, 230)",
        "base-content": "rgb(31, 41, 55)",
      },
    },
    "extraVars": {
      "dark": {
        "animation-btn": "0.25s",
        "animation-input": "0.2s",
        "border-btn": "1px",
        "rounded-badge": "1.9rem",
        "rounded-box": "1rem",
        "rounded-btn": "0.5rem",
        "tab-border": "1px",
        "tab-radius": "0.5rem",
      },
      "light": {
        "animation-btn": "0.25s",
        "animation-input": "0.2s",
        "border-btn": "1px",
        "rounded-badge": "1.9rem",
        "rounded-box": "1rem",
        "rounded-btn": "0.5rem",
        "tab-border": "1px",
        "tab-radius": "0.5rem",
      },
    },
    "themes": {
      "dark": {
        "selector": "[data-theme=\\"dark\\"]",
      },
      "light": {
        "selector": ":root",
      },
    },
    "types": {},
  },
  "global": {
    "atMedia": {
      "hover": false,
    },
    "pseudo": {
      "where": true,
    },
    "selector": {
      "globalKeyword": "global",
      "universal": "*",
    },
  },
  "log": true,
  "mode": "styled",
  "varPrefix": "--ice-",
}
`;
